tree-sitter-rengbis/test/corpus/alternatives.txt
================================================================================
Alternatives
================================================================================

= text | number

--------------------------------------------------------------------------------

(schema
  (root
    (alternative_values
      (text_value)
      (numeric_value))))

================================================================================
Enum values
================================================================================

= "a" | "b" | "c"

--------------------------------------------------------------------------------

(schema
  (root
    (alternative_values
      (given_text_value
        (quoted_string))
      (given_text_value
        (quoted_string))
      (given_text_value
        (quoted_string)))))

================================================================================
Grouped alternatives
================================================================================

= ("a" | "b")

--------------------------------------------------------------------------------

(schema
  (root
    (grouped_alternatives
      (alternative_values
        (given_text_value
          (quoted_string))
        (given_text_value
          (quoted_string))))))

================================================================================
Tuple
================================================================================

= (text, number)

--------------------------------------------------------------------------------

(schema
  (root
    (tuple_value
      (text_value)
      (numeric_value))))
