tree-sitter-rengbis/test/corpus/lists.txt
================================================================================
List with plus (one or more)
================================================================================

= text+

--------------------------------------------------------------------------------

(schema
  (root
    (list_of_values
      (text_value)
      (list_marker))))

================================================================================
List with star (zero or more)
================================================================================

= text*

--------------------------------------------------------------------------------

(schema
  (root
    (list_of_values
      (text_value)
      (list_marker))))

================================================================================
List with unique constraint
================================================================================

= text* [ unique ]

--------------------------------------------------------------------------------

(schema
  (root
    (list_of_values
      (text_value)
      (list_marker)
      (list_constraint_block
        (list_constraint
          (unique_constraint))))))

================================================================================
List with size constraint
================================================================================

= text* [ size >= 2 ]

--------------------------------------------------------------------------------

(schema
  (root
    (list_of_values
      (text_value)
      (list_marker)
      (list_constraint_block
        (list_constraint
          (size_constraint
            (comparison_op)
            (integer)))))))

================================================================================
List with unique by field
================================================================================

= {name: text}* [ unique = name ]

--------------------------------------------------------------------------------

(schema
  (root
    (list_of_values
      (object_value
        (object_fields
          (object_field
            (object_label
              (mandatory_label
                (identifier)))
            (text_value))))
      (list_marker)
      (list_constraint_block
        (list_constraint
          (unique_by_field_constraint
            (identifier)))))))
