tree-sitter-rengbis/test/corpus/primitives.txt
================================================================================
Any value
================================================================================

= any

--------------------------------------------------------------------------------

(schema
  (root
    (any_value)))

================================================================================
Boolean value
================================================================================

= boolean

--------------------------------------------------------------------------------

(schema
  (root
    (boolean_value)))

================================================================================
Text value with no constraints
================================================================================

= text

--------------------------------------------------------------------------------

(schema
  (root
    (text_value)))

================================================================================
Text value with length constraint
================================================================================

= text [ length >= 5 ]

--------------------------------------------------------------------------------

(schema
  (root
    (text_value
      (text_constraint_block
        (text_constraint
          (length_constraint
            (comparison_op)
            (integer)))))))

================================================================================
Text value with regex constraint
================================================================================

= text [ regex = "^[a-z]+$" ]

--------------------------------------------------------------------------------

(schema
  (root
    (text_value
      (text_constraint_block
        (text_constraint
          (regex_constraint
            (quoted_string)))))))

================================================================================
Text value with default
================================================================================

= text ?= "hello"

--------------------------------------------------------------------------------

(schema
  (root
    (text_value
      (text_default
        (quoted_string)))))

================================================================================
Number value
================================================================================

= number

--------------------------------------------------------------------------------

(schema
  (root
    (numeric_value)))

================================================================================
Number with integer constraint
================================================================================

= number [ integer ]

--------------------------------------------------------------------------------

(schema
  (root
    (numeric_value
      (numeric_constraint_block
        (numeric_constraint
          (integer_constraint))))))

================================================================================
Number with value constraint
================================================================================

= number [ value >= 0 ]

--------------------------------------------------------------------------------

(schema
  (root
    (numeric_value
      (numeric_constraint_block
        (numeric_constraint
          (value_constraint
            (comparison_op)
            (decimal_number)))))))

================================================================================
Binary value
================================================================================

= binary

--------------------------------------------------------------------------------

(schema
  (root
    (binary_value)))

================================================================================
Binary with encoding
================================================================================

= binary [ encoding = 'base64' ]

--------------------------------------------------------------------------------

(schema
  (root
    (binary_value
      (binary_constraint_block
        (binary_constraint
          (encoding_constraint
            (binary_encoding)))))))

================================================================================
Time value
================================================================================

= time

--------------------------------------------------------------------------------

(schema
  (root
    (time_value)))

================================================================================
Time with format
================================================================================

= time [ format = 'iso8601' ]

--------------------------------------------------------------------------------

(schema
  (root
    (time_value
      (time_constraint_block
        (time_constraint
          (time_format
            (named_time_format)))))))

================================================================================
Given text value (string literal)
================================================================================

= "hello"

--------------------------------------------------------------------------------

(schema
  (root
    (given_text_value
      (quoted_string))))
